# TechVriti

./: README.md  pyproject.toml
outputs/: output.md  output1.md  output2.md
src/skillbridge/: crew.py  main.py  main2.py  tempCodeRunnerFile.py
src/skillbridge/config/: agents.yaml  tasks.yaml
src/skillbridge/tools/: PDFReader.py
