[project]
name = "skillbridge"
version = "0.1.0"
description = "Skillbridge using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0",
    "PyPDF2 >=3.0"
]

[project.scripts]
skillbridge = "skillbridge.main:run"
run_crew = "skillbridge.main:run"
train = "skillbridge.main:train"
replay = "skillbridge.main:replay"
test = "skillbridge.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
